--- a/app/index.html
+++ b/app/index.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Toxin</title>
+    <link rel="stylesheet" href="../dist/css/app.css">
 </head>
 <body>
-    
+    <h1>Webpack page</h1>
+
+    <script src="../dist/js/app.js"></script>
 </body>
 </html>
