--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../dist/css/app.css">
 </head>
 <body>
-    <h1>Webpack page</h1>
+    <h1>Webpack page hello!!</h1>
 
     <script src="../dist/js/app.js"></script>
 </body>
